Userstyle: fix stationList width problem.
Pandora JS code applies explicit width to stationList
during launch -- and it's much too narrow if you
launch with a small window and later resize it larger.

--- a/pandora-fluid.user.css
+++ b/pandora-fluid.user.css
@@ -9,6 +9,15 @@
     min-width: 425px !important;
 }
 
+/* Prevent stationList explicit sizing from jQuery
+   (was clipping list weirdly when launching app at small size */
+.stationListHolder,
+.stationListHolder .jspContainer,
+.stationListHolder .jspContainer .jspPane {
+    width: auto !important;
+}
+
+
 /* Make sure the top station menu is scrollable in a short window */
 .stationChangeList .stationList {
     overflow-y: auto !important;
